--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -28,7 +28,7 @@ body {
 	margin-bottom:4vh;
 }
 h1,h2,h3,h4,.h1,.h2,.h3,.h4, #menu, .header .menu-icon:before, input.special, .intro:after, .intro:before, .scrolldown, .font, .gatsby-image-wrapper, .full-width-image:after, .sidebarMenuInner li a, .horizontal-scroll::before, .sliderholder1::before {
-	font-family: FrancoisOne,lucida grande,lucida sans unicode,Tahoma,Sans-Serif !important;
+	font-family: Unpact,lucida grande,lucida sans unicode,Tahoma,Sans-Serif !important;
 	// font-style: italic;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -285,13 +285,13 @@ p{
 	font-size:clamp(2rem, 3.5vw, 3.8rem);
 }
 .specialfont{
-	font-family:FrancoisOne;
+	font-family:Unpact;
 	// font-style: italic;
 	line-height:100% !important;
 	font-size: clamp(2.5rem, 5vw, 5rem);
 }
 .specialfont2{
-	font-family:FrancoisOne;
+	font-family:Unpact;
 	line-height:100% !important;
 	// font-style: italic !important;
 }
