--- a/src/assets/scss/_theme-variables.scss
+++ b/src/assets/scss/_theme-variables.scss
@@ -5,7 +5,10 @@ $breakpoint-lg: 1022px;
 $breakpoint-xl: 1200px;
 
 :root {
-  --font-family:FrancoisOne, -apple-system, BlinkMacSystemFont, avenir next, avenir,
+  --font-family:Unpact, -apple-system, BlinkMacSystemFont, avenir next, avenir,
+    helvetica neue, helvetica, Ubuntu, roboto, noto, segoe ui, arial, sans-serif;
+
+    --font-body:Unpact, -apple-system, BlinkMacSystemFont, avenir next, avenir,
     helvetica neue, helvetica, Ubuntu, roboto, noto, segoe ui, arial, sans-serif;
   --font-family-mono: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console,
     monospace;
