--- a/static/assets/fonts/fonts.css
+++ b/static/assets/fonts/fonts.css
@@ -1,8 +1,8 @@
 
 @font-face {
-  font-family: "FrancoisOne";
+  font-family: "Unpact";
   font-style: normal;
   font-weight: 400;
-  src: url("FrancoisOne-Regular.woff2") format('woff2');
+  src: url("unpactregular.woff2") format('woff2');
   font-display: swap;
 }
