--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -27,7 +27,7 @@ body {
 #posts article{
 	margin-bottom:4vh;
 }
-h1,h2,h3,h4,.h1,.h2,.h3,.h4, #menu, .header .menu-icon:before, input.special, .intro:after, .intro:before, .scrolldown, .font, .gatsby-image-wrapper, .full-width-image:after, .sidebarMenuInner li a, .horizontal-scroll::before, .sliderholder1::before {
+h1,h2,h3,h4,.h1,.h2,.h3,.h4, #menu, .header .menu-icon:before, input.special, .intro:after, .intro:before, .scrolldown, .font, .gatsby-image-wrapper, .full-width-image:after, .horizontal-scroll::before, .sliderholder1::before {
 	font-family: Unpact,lucida grande,lucida sans unicode,Tahoma,Sans-Serif !important;
 	// font-style: italic;
 }
