--- a/static/assets/fonts/fonts.css
+++ b/static/assets/fonts/fonts.css
@@ -3,6 +3,6 @@
   font-family: "Unpact";
   font-style: normal;
   font-weight: 400;
-  src: url("unpactregular.woff2") format('woff2');
+  src: url("Anton-Regular.woff2") format('woff2');
   font-display: swap;
 }
