--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -932,6 +932,33 @@ footer{
 	animation: fadeout .5s forwards;
 	background:rgba(2, 83, 83, 0.219)
 }
+
+
+.horizontal-holder::after{
+	content:'\276E \276E scroll';
+	position:relative;
+	z-index: 3;
+	display: inline-block;
+	margin:auto;
+	padding:10px 10px;
+	background:rgba(0, 0, 0, .7);
+	opacity:.9;
+	display:flex;
+	flex-direction:column;
+	justify-content:center;
+	border-radius:12px;
+	bottom:50vh;
+	right:12vh;
+	color:#fff;
+	transform: rotate(90deg);
+	font-size:clamp(2rem, 3vw, 3rem);
+	text-shadow:2px 2px 2px #333;
+	top:375px;
+	left:30vw;
+}
+
+
+
 .horizontal-scroll-wrapper::after{
 	content:'\276E \276E scroll';
 	position:relative;
